# fantasy-nfl

./: .gitignore  Hello.py  ffs_latest_rankings.py  fp_rankings_history.csv  import_r_packages.py  install_r_packages.py  main.py  pyproject.toml  requirements-actions.txt  requirements.txt  run_data_creation.py  scoring_history.py  simulate_table.py  sleeper_helpers.py  standings_helpers.py  streamlit_app.py  test.py  test_rpy2.py  test_rpy2_v2.py
.github/workflows/: actions.yml
.streamlit/: config.toml
Data/: df_matchup_schedule.csv  df_matchup_schedule1.csv  df_matchup_schedule2.csv
data/: df_matchup_schedule.csv  df_summary_season.csv  df_summary_week.csv  df_summary_week_Across The Pond.csv  df_summary_week_House of Hard Knocks.csv  df_summary_week_NFL Dynasty.csv  df_summary_week_Super Flex Keeper.csv  df_summary_week_The Guillotine.csv  df_summary_week_UK Dynasty League .csv  draft_picks.csv
nfl-env/: pyvenv.cfg
nfl-env/Scripts/: activate  activate.bat  jsonpointer
streamlit_pages/: current_standings.py  playoff_scenarios.py  rookie_draft.py  season_projections.py
